src/com/sun/btrace/btracel/model/parser/BTraceLParser.java
// Generated from /home/jbachorik/Desktop/BTraceL.g4 by ANTLR 4.1
package com.sun.btrace.btracel.model.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BTraceLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, NAME=4, NUMBER=5, STRING_LITERAL=6, REGEXP_LITERAL=7, 
		VAR_REF=8, WS=9, NEWLINE=10, COLON=11, COMMA=12, PERIOD=13, SEMI=14, PIPE=15, 
		QUOTE=16, LSBRACKET=17, RSBRACKET=18, PLUS=19, MINUS=20, MULTIPLY=21, 
		PERCENT=22, DIVIDE=23, ASSIGN=24, TILDA=25, LCBRACKET=26, RCBRACKET=27, 
		LBRACKET=28, RBRACKET=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'entry'", "'exit'", "'exception'", "NAME", "NUMBER", "STRING_LITERAL", 
		"REGEXP_LITERAL", "VAR_REF", "WS", "NEWLINE", "':'", "','", "'.'", "';'", 
		"'|'", "'\"'", "'['", "']'", "'+'", "'-'", "'*'", "'%'", "'/'", "'='", 
		"'~'", "'{'", "'}'", "'('", "')'"
	};
	public static final int
		RULE_program = 0, RULE_cutpoint = 1, RULE_cutdef = 2, RULE_followdef = 3, 
		RULE_classmatch = 4, RULE_methodmatch = 5, RULE_pkgid = 6, RULE_methodid = 7, 
		RULE_subclasses = 8, RULE_regex = 9, RULE_handlers = 10, RULE_handler = 11, 
		RULE_type = 12, RULE_block = 13, RULE_statement = 14, RULE_assign = 15, 
		RULE_terminator = 16, RULE_exp_unary = 17, RULE_exp_plus = 18, RULE_exp_minus = 19, 
		RULE_exp_mul = 20, RULE_exp_div = 21, RULE_exp_mod = 22, RULE_exp_binary = 23, 
		RULE_exp = 24, RULE_functionEval = 25, RULE_arguments = 26;
	public static final String[] ruleNames = {
		"program", "cutpoint", "cutdef", "followdef", "classmatch", "methodmatch", 
		"pkgid", "methodid", "subclasses", "regex", "handlers", "handler", "type", 
		"block", "statement", "assign", "terminator", "exp_unary", "exp_plus", 
		"exp_minus", "exp_mul", "exp_div", "exp_mod", "exp_binary", "exp", "functionEval", 
		"arguments"
	};

	@Override
	public String getGrammarFileName() { return "BTraceL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public BTraceLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BTraceLParser.EOF, 0); }
		public CutpointContext cutpoint() {
			return getRuleContext(CutpointContext.class,0);
		}
		public HandlersContext handlers() {
			return getRuleContext(HandlersContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); cutpoint();
			setState(55); match(COLON);
			setState(56); handlers();
			setState(57); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CutpointContext extends ParserRuleContext {
		public CutdefContext cutdef() {
			return getRuleContext(CutdefContext.class,0);
		}
		public FollowdefContext followdef() {
			return getRuleContext(FollowdefContext.class,0);
		}
		public CutpointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cutpoint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterCutpoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitCutpoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitCutpoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CutpointContext cutpoint() throws RecognitionException {
		CutpointContext _localctx = new CutpointContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cutpoint);
		try {
			setState(61);
			switch (_input.LA(1)) {
			case NAME:
			case REGEXP_LITERAL:
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(59); cutdef();
				}
				break;
			case LSBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(60); followdef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CutdefContext extends ParserRuleContext {
		public MethodmatchContext methodmatch() {
			return getRuleContext(MethodmatchContext.class,0);
		}
		public ClassmatchContext classmatch() {
			return getRuleContext(ClassmatchContext.class,0);
		}
		public CutdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cutdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterCutdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitCutdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitCutdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CutdefContext cutdef() throws RecognitionException {
		CutdefContext _localctx = new CutdefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cutdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); classmatch();
			setState(64); match(COLON);
			setState(65); methodmatch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FollowdefContext extends ParserRuleContext {
		public List<CutdefContext> cutdef() {
			return getRuleContexts(CutdefContext.class);
		}
		public CutdefContext cutdef(int i) {
			return getRuleContext(CutdefContext.class,i);
		}
		public FollowdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_followdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterFollowdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitFollowdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitFollowdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FollowdefContext followdef() throws RecognitionException {
		FollowdefContext _localctx = new FollowdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_followdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(LSBRACKET);
			setState(68); cutdef();
			setState(69); match(RSBRACKET);
			setState(70); match(TILDA);
			setState(71); match(LSBRACKET);
			setState(72); cutdef();
			setState(73); match(RSBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassmatchContext extends ParserRuleContext {
		public RegexContext regex() {
			return getRuleContext(RegexContext.class,0);
		}
		public PkgidContext pkgid() {
			return getRuleContext(PkgidContext.class,0);
		}
		public SubclassesContext subclasses() {
			return getRuleContext(SubclassesContext.class,0);
		}
		public ClassmatchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classmatch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterClassmatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitClassmatch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitClassmatch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassmatchContext classmatch() throws RecognitionException {
		ClassmatchContext _localctx = new ClassmatchContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classmatch);
		try {
			setState(78);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(75); pkgid();
				}
				break;
			case PLUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(76); subclasses();
				}
				break;
			case REGEXP_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(77); regex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodmatchContext extends ParserRuleContext {
		public RegexContext regex() {
			return getRuleContext(RegexContext.class,0);
		}
		public MethodidContext methodid() {
			return getRuleContext(MethodidContext.class,0);
		}
		public MethodmatchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodmatch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterMethodmatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitMethodmatch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitMethodmatch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodmatchContext methodmatch() throws RecognitionException {
		MethodmatchContext _localctx = new MethodmatchContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodmatch);
		try {
			setState(82);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); methodid();
				}
				break;
			case REGEXP_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(81); regex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PkgidContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(BTraceLParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(BTraceLParser.NAME); }
		public PkgidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pkgid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterPkgid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitPkgid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitPkgid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PkgidContext pkgid() throws RecognitionException {
		PkgidContext _localctx = new PkgidContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pkgid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(NAME);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERIOD) {
				{
				{
				setState(85); match(PERIOD);
				setState(86); match(NAME);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodidContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(BTraceLParser.NAME, 0); }
		public MethodidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterMethodid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitMethodid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitMethodid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodidContext methodid() throws RecognitionException {
		MethodidContext _localctx = new MethodidContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methodid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubclassesContext extends ParserRuleContext {
		public PkgidContext pkgid() {
			return getRuleContext(PkgidContext.class,0);
		}
		public SubclassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subclasses; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterSubclasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitSubclasses(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitSubclasses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubclassesContext subclasses() throws RecognitionException {
		SubclassesContext _localctx = new SubclassesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subclasses);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(PLUS);
			setState(95); pkgid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegexContext extends ParserRuleContext {
		public TerminalNode REGEXP_LITERAL() { return getToken(BTraceLParser.REGEXP_LITERAL, 0); }
		public RegexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterRegex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitRegex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitRegex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegexContext regex() throws RecognitionException {
		RegexContext _localctx = new RegexContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_regex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); match(REGEXP_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HandlersContext extends ParserRuleContext {
		public HandlerContext handler(int i) {
			return getRuleContext(HandlerContext.class,i);
		}
		public List<HandlerContext> handler() {
			return getRuleContexts(HandlerContext.class);
		}
		public HandlersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_handlers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterHandlers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitHandlers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitHandlers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HandlersContext handlers() throws RecognitionException {
		HandlersContext _localctx = new HandlersContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_handlers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); handler();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(100); match(COMMA);
				setState(101); handler();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HandlerContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public HandlerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_handler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterHandler(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitHandler(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitHandler(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HandlerContext handler() throws RecognitionException {
		HandlerContext _localctx = new HandlerContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_handler);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); type();
			setState(108); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 3))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(LCBRACKET);
			setState(113); statement();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(114); match(SEMI);
				setState(115); statement();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121); match(RCBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public FunctionEvalContext functionEval() {
			return getRuleContext(FunctionEvalContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_statement);
		try {
			setState(125);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123); assign();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); functionEval();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(BTraceLParser.ASSIGN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode NAME() { return getToken(BTraceLParser.NAME, 0); }
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(NAME);
			setState(128); match(ASSIGN);
			setState(129); exp();
			setState(131);
			_la = _input.LA(1);
			if (_la==EOF || _la==NEWLINE) {
				{
				setState(130); terminator();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminatorContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(BTraceLParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(BTraceLParser.EOF, 0); }
		public TerminatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).enterTerminator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BTraceLListener ) ((BTraceLListener)listener).exitTerminator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BTraceLVisitor ) return ((BTraceLVisitor<? extends T>)visitor).visitTerminator(this);
			else return visitor.visitChildren(this);
		}
	}
